tests/ucc/type/bad/conflict-fun-type-1.c
int f(int b);

int f(void)
{
    return 0;
}
